Fixing Controller Alignment

--- a/Cloud/Plantboter/src/pages/settings/style.css
+++ b/Cloud/Plantboter/src/pages/settings/style.css
@@ -1,5 +1,8 @@
 .controller_grid {
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
+    align-content: flex-start;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
